[package]
name = "ui-toolkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
ui-toolkit-macros = { path = "../ui-toolkit-macros" }
bevy = { version = "0.18", default-features = false, features = ["default"] }
image-blp = "1"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
notify = "7"

[profile.dev.package."*"]
opt-level = 2

